// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionGroup component should render default action group variant 1`] = `
<Component>
  <div
    className="pf-c-form__group pf-m-action"
  >
    <div
      className="pf-c-form__actions"
    >
      <div>
        Hello
      </div>
    </div>
  </div>
</Component>
`;

exports[`ActionGroup component should render horizontal form ActionGroup variant 1`] = `
<Component
  isHorizontal={true}
>
  <form
    className="pf-c-form pf-m-horizontal"
    noValidate={true}
  >
    <Component>
      <div
        className="pf-c-form__group pf-m-action"
      >
        <div
          className="pf-c-form__horizontal-group"
        >
          <div
            className="pf-c-form__actions"
          />
        </div>
      </div>
    </Component>
  </form>
</Component>
`;
